fix(ui): fix popup responsiveness on mobile

--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -31,6 +31,10 @@
   padding: 20px 36px;
 }
 
+.popup__container_confirmation {
+  height: 180px;
+}
+
 .popup__container-image {
   padding: 0;
   background-color: transparent;
@@ -107,6 +111,12 @@
   height: 50px;
 }
 
+.popup__save-button_confirmation {
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .popup__save-button_disabled {
   background-color: #ffffff;
   border: rgba(0, 0, 0, 0.2) 1px solid;
@@ -149,6 +159,17 @@
   opacity: 0.6;
 }
 
+.popup-confirmation {
+  justify-content: center;
+  align-items: center;
+  font-family: "Inter", sans-serif;
+  color: #000000;
+  font-weight: 900;
+  font-size: 24px;
+  padding: 16px 8px;
+  margin: 0;
+}
+
 @media screen and (max-width: 1024px) {
   .popup__close-button {
     width: 26px;
@@ -158,9 +179,8 @@
 
 @media screen and (max-width: 601px) {
   .popup {
-    max-width: 282px;
-    right: 0;
-    left: 20px;
+    max-width: 88%;
+    margin: auto 20px auto 20px;
   }
 
   .popup__container {
@@ -182,5 +202,9 @@
     right: 1px;
     width: 26px;
     height: 26px;
+  }
+
+  .popup__container_confirmation {
+    height: 140px;
   }
 }
